--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
 language: c
+sudo: required
+dist: bionic
+install:
+- sudo apt-get update
+- sudo apt-get install automake autoconf libtool libxml2 libxml2-dev libxslt1 libxslt1-dev libssl1.0 libssl1.0-dev libnspr4 libnspr4-dev libnss3 libnss3-dev
+script:
+- ./autogen.sh && make && make test
