update travis integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ sudo: required
 dist: bionic
 install:
 - sudo apt-get update
-- sudo apt-get install automake autoconf libtool libxml2 libxml2-dev libxslt libxslt-dev libssl libssl-dev libnspr4 libnspr4-dev libnss3 libnss3-dev
+- sudo apt-get install automake autoconf libtool libxml2 libxml2-dev libxslt1 libxslt1-dev libssl1.0.0 libssl1.0-dev libnspr4 libnspr4-dev libnss3 libnss3-dev
 script:
 - ./autogen.sh && make && make test
