--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ dist: bionic
 install:
 - sudo apt-get update
 - sudo apt-get install automake autoconf libtool libxml2 libxml2-dev libxslt1.1 libxslt1-dev
+- sudo apt search libssl
 - sudo apt-get install libssl1.0.0 libssl1-dev libnspr4 libnspr4-dev libnss3 libnss3-dev
 script:
 - ./autogen.sh && make && make test
