--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,9 @@ install:
 - sudo apt-get install libssl1.0.0 libssl-dev
 # install nspr/nss libraries
 - sudo apt-get install libnspr4 libnspr4-dev libnss3 libnss3-dev
+# install gcrypt libraries
+- sudo apt-get install libgcrypt20 libgcrypt20-dev
+# install gnutls libraries
+- sudo apt-get install libgnutls28 libgnutls-dev
 script:
 - ./autogen.sh && make && make check
