update travis integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,4 @@ install:
 # install gnutls libraries
 - sudo apt-get install libgnutls28 libgnutls-dev
 script:
-- ./autogen.sh
-- mkdir build && cd build && ../configure && make && make check
+- mkdir build && cd build && ../ autogen.sh && make && make check
