--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,9 +35,9 @@ install:
   - if [%COMPILER%]==[MinGW-w64] C:\msys64\usr\bin\pacman -S --noconfirm --needed mingw-w64-x86_64-{libtool,libxml2,libxslt,openssl,gnutls}
 
 build_script:
-  - mkdir build
-  - cd build
-  - if [%COMPILER%]==[MinGW-w64] C:\msys64\usr\bin\bash ../autogen.sh --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-mscrypto --enable-static-linking=$STATIC
+  - if [%COMPILER%]==[MinGW-w64] C:\msys64\usr\bin\autoreconf -fi
+  - mkdir build && cd build
+  - if [%COMPILER%]==[MinGW-w64] C:\msys64\usr\bin\bash ../configure --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-mscrypto --enable-static-linking=$STATIC
   - make
 
 test_script:
