--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,9 +37,7 @@ install:
   - if [%COMPILER%]==[MinGW-w64] pacman -S --noconfirm --needed mingw-w64-x86_64-{libxml2,libxslt,openssl,gnutls}
 
 build_script:
-  - dir C:\msys64
-  - dir C:\msys64\mingw64
-  - find C:\msys64 -name "autoreconf*"
+  - cd %APPVEYOR_BUILD_FOLDER%
   - if [%COMPILER%]==[MinGW-w64] bash --login -c autoreconf -fi
   - mkdir build && cd build
   - if [%COMPILER%]==[MinGW-w64] bash ../configure --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-mscrypto --enable-static-linking=$STATIC
