--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,9 +38,9 @@ install:
   - if [%COMPILER%]==[MinGW-w64] pacman -S --noconfirm --needed mingw-w64-x86_64-{toolchain,libtool}
   - if [%COMPILER%]==[MinGW-w64] pacman -S --noconfirm --needed mingw-w64-x86_64-{libxml2,libxslt,openssl,gnutls}
   - if [%COMPILER%]==[MSVC17] mkdir extra && cd extra
-  - if [%COMPILER%]==[MSVC17] Start-FileDownload http://xmlsoft.org/sources/win32/64bit/iconv-1.14-win32-x86_64.7z
-  - if [%COMPILER%]==[MSVC17] Start-FileDownload http://xmlsoft.org/sources/win32/64bit/libxml2-2.9.3-win32-x86_64.7z
-  - if [%COMPILER%]==[MSVC17] Start-FileDownload http://xmlsoft.org/sources/win32/64bit/libxslt-1.1.28-win32-x86_64.7z
+  - if [%COMPILER%]==[MSVC17] appveyor DownloadFile http://xmlsoft.org/sources/win32/64bit/iconv-1.14-win32-x86_64.7z
+  - if [%COMPILER%]==[MSVC17] appveyor DownloadFile http://xmlsoft.org/sources/win32/64bit/libxml2-2.9.3-win32-x86_64.7z
+  - if [%COMPILER%]==[MSVC17] appveyor DownloadFile http://xmlsoft.org/sources/win32/64bit/libxslt-1.1.28-win32-x86_64.7z
   - if [%COMPILER%]==[MSVC17] 7z x iconv-1.14-win32-x86_64.7z libxml2-2.9.3-win32-x86_64.7z libxslt-1.1.28-win32-x86_64.7z 
   - if [%COMPILER%]==[MSVC17] cd ..
 
