--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,12 @@
 shallow_clone: true
 
 environment:
+  global:
+    extra_downloads_url: http://xmlsoft.org/sources/win32/64bit
+    iconv_file: iconv-1.14-win32-x86_64.7z
+    libxml2_file: libxml2-2.9.3-win32-x86_64.7z
+    libxslt_file: libxslt-1.1.28-win32-x86_64.7z
+
   matrix:
     # enable shared linking
     #- STATIC: no
@@ -38,10 +44,12 @@ install:
   - if [%COMPILER%]==[MinGW-w64] pacman -S --noconfirm --needed mingw-w64-x86_64-{toolchain,libtool}
   - if [%COMPILER%]==[MinGW-w64] pacman -S --noconfirm --needed mingw-w64-x86_64-{libxml2,libxslt,openssl,gnutls}
   - if [%COMPILER%]==[MSVC17] mkdir extra && cd extra
-  - if [%COMPILER%]==[MSVC17] appveyor DownloadFile http://xmlsoft.org/sources/win32/64bit/iconv-1.14-win32-x86_64.7z
-  - if [%COMPILER%]==[MSVC17] appveyor DownloadFile http://xmlsoft.org/sources/win32/64bit/libxml2-2.9.3-win32-x86_64.7z
-  - if [%COMPILER%]==[MSVC17] appveyor DownloadFile http://xmlsoft.org/sources/win32/64bit/libxslt-1.1.28-win32-x86_64.7z
-  - if [%COMPILER%]==[MSVC17] 7z x iconv-1.14-win32-x86_64.7z libxml2-2.9.3-win32-x86_64.7z libxslt-1.1.28-win32-x86_64.7z 
+  - if [%COMPILER%]==[MSVC17] appveyor DownloadFile {extra_downloads_url}/{iconv_file}
+  - if [%COMPILER%]==[MSVC17] 7z x {iconv_file}
+  - if [%COMPILER%]==[MSVC17] appveyor DownloadFile {extra_downloads_url}/{libxml2_file}
+  - if [%COMPILER%]==[MSVC17] 7z x {libxml2_file}
+  - if [%COMPILER%]==[MSVC17] appveyor DownloadFile {extra_downloads_url}/{libxslt_file}
+  - if [%COMPILER%]==[MSVC17] 7z x {libxslt_file}
   - if [%COMPILER%]==[MSVC17] cd ..
 
 build_script:
