--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ shallow_clone: true
 
 environment:
   global:
-    EXTRAS_FOLDER: extra
+    EXTRAS_FOLDER: C:\extras
     EXTRAS_URL: http://xmlsoft.org/sources/win32/64bit
     ICONV_FILE: iconv-1.14-win32-x86_64.7z
     LIBXML2_FILE: libxml2-2.9.3-win32-x86_64.7z
@@ -58,7 +58,7 @@ build_script:
   - if [%COMPILER%]==[MinGW-w64] bash ../autogen.sh --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-mscrypto --enable-static-linking=$STATIC
   - if [%COMPILER%]==[MinGW-w64] make
   - if [%COMPILER%]==[MSVC17] cd win32
-  - if [%COMPILER%]==[MSVC17] cscript configure.js iconv=yes unicode=yes static=$STATIC prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
+  - if [%COMPILER%]==[MSVC17] cscript configure.js iconv=yes unicode=yes prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
  
 test_script:
   - if [%COMPILER%]==[MinGW-w64] make check
