--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,7 +38,7 @@ environment:
 init:
   - git config --global core.autocrlf input
   - if [%COMPILER%]==[MinGW-w64] set PATH=C:\msys64\usr\bin;C:\msys64\mingw64\bin;%PATH%
-  #- if [%COMPILER%]==[MSVC17] 
+  - if [%COMPILER%]==[MSVC17] set PATH=%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;;%PATH%
     
 install:
   - if [%COMPILER%]==[MinGW-w64] pacman --noconfirm --sync --refresh --refresh --sysupgrade --sysupgrade
@@ -58,7 +58,9 @@ build_script:
   - if [%COMPILER%]==[MinGW-w64] bash ../autogen.sh --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-mscrypto --enable-static-linking=$STATIC
   - if [%COMPILER%]==[MinGW-w64] make
   - if [%COMPILER%]==[MSVC17] cd win32
-  - if [%COMPILER%]==[MSVC17] cscript configure.js iconv=yes unicode=yes prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
+  - if [%COMPILER%]==[MSVC17] cscript configure.js static=%STATIC% conv=yes unicode=yes prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
+  - if [%COMPILER%]==[MSVC17] nmake
  
 test_script:
   - if [%COMPILER%]==[MinGW-w64] make check
+  - if [%COMPILER%]==[MSVC17] nmake check
