--- a/appveyor.yml
+++ b/appveyor.yml
@@ -58,7 +58,7 @@ build_script:
   - if [%COMPILER%]==[MinGW-w64] bash ../autogen.sh --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-mscrypto --enable-static-linking=$STATIC
   - if [%COMPILER%]==[MinGW-w64] make
   - if [%COMPILER%]==[MSVC17] cd win32
-  - if [%COMPILER%]==[MSVC17] cscript configure.js static=%STATIC% conv=yes unicode=yes prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
+  - if [%COMPILER%]==[MSVC17] cscript configure.js static=%STATIC% crypto=mscrypto,mscng iconv=yes unicode=yes prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
   - if [%COMPILER%]==[MSVC17] nmake
  
 test_script:
