--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,10 +17,9 @@ shallow_clone: true
 environment:
   global:
     EXTRAS_FOLDER: C:\extras
-    EXTRAS_URL: http://xmlsoft.org/sources/win32/64bit
-    ICONV_FILE: iconv-1.14-win32-x86_64.7z
-    LIBXML2_FILE: libxml2-2.9.3-win32-x86_64.7z
-    LIBXSLT_FILE: libxslt-1.1.28-win32-x86_64.7z
+    EXTRAS_URL: https://www.aleksey.com/xmlsec/download/extras
+    LIBXML2_FILE: libxml2-2.9.8-noiconv-win-x64.7z
+    LIBXSLT_FILE: libxslt-1.1.32-noiconv-win-x64.7z
 
   matrix:
     # enable shared linking
@@ -46,8 +45,6 @@ install:
   - if [%COMPILER%]==[MinGW-w64] pacman -S --noconfirm --needed mingw-w64-x86_64-{libxml2,libxslt,openssl,gnutls}
   - if [%COMPILER%]==[MSVC17] call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
   - if [%COMPILER%]==[MSVC17] mkdir %EXTRAS_FOLDER% && cd %EXTRAS_FOLDER%
-  - if [%COMPILER%]==[MSVC17] appveyor DownloadFile %EXTRAS_URL%/%ICONV_FILE%
-  - if [%COMPILER%]==[MSVC17] 7z x %ICONV_FILE%
   - if [%COMPILER%]==[MSVC17] appveyor DownloadFile %EXTRAS_URL%/%LIBXML2_FILE%
   - if [%COMPILER%]==[MSVC17] 7z x %LIBXML2_FILE%
   - if [%COMPILER%]==[MSVC17] appveyor DownloadFile %EXTRAS_URL%/%LIBXSLT_FILE%
@@ -60,7 +57,7 @@ build_script:
   - if [%COMPILER%]==[MinGW-w64] bash ../autogen.sh --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-mscrypto --enable-static-linking=$STATIC
   - if [%COMPILER%]==[MinGW-w64] make
   - if [%COMPILER%]==[MSVC17] cd win32
-  - if [%COMPILER%]==[MSVC17] cscript configure.js static=%STATIC% crypto=mscrypto,mscng iconv=yes unicode=yes prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%EXTRAS_FOLDER%\include\libxml2;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
+  - if [%COMPILER%]==[MSVC17] cscript configure.js static=%STATIC% crypto=mscrypto,mscng iconv=no unicode=yes prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%EXTRAS_FOLDER%\include\libxml2;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
   - if [%COMPILER%]==[MSVC17] nmake
  
 test_script:
