--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,19 +12,57 @@
 # You can check the whole build process in the logs, and any later commit will start
 # a new build using a fresh virtual machine.
 
-init:
-  - git config --global core.autocrlf input
-
 shallow_clone: true
 
 environment:
-  matrix:
-    # enable shared linking
-    - STATIC: no
+  global:
+    EXTRAS_FOLDER: C:\extras
+    EXTRAS_URL: https://www.aleksey.com/xmlsec/download/extras
+    LIBXML2_FILE: libxml2-2.9.8-noiconv-win-x64.7z
+    LIBXSLT_FILE: libxslt-1.1.32-noiconv-win-x64.7z
 
-    # enable static linking
+  matrix:
+    - STATIC: no
+      COMPILER: MinGW-w64
+
     - STATIC: yes
+      COMPILER: MinGW-w64
+
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      STATIC: no
+      COMPILER: MSVC17
+
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      STATIC: yes
+      COMPILER: MSVC17
+
+init:
+  - git config --global core.autocrlf input
+  - if [%COMPILER%]==[MinGW-w64] set PATH=C:\msys64\usr\bin;C:\msys64\mingw64\bin;%PATH%
+  - if [%COMPILER%]==[MSVC17] set PATH=%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;;%PATH%
+    
+install:
+  - if [%COMPILER%]==[MinGW-w64] pacman --noconfirm --sync --refresh --refresh --sysupgrade --sysupgrade
+  - if [%COMPILER%]==[MinGW-w64] pacman -S --noconfirm --needed mingw-w64-x86_64-{toolchain,libtool}
+  - if [%COMPILER%]==[MinGW-w64] pacman -S --noconfirm --needed mingw-w64-x86_64-{libxml2,libxslt,openssl,gnutls}
+  - if [%COMPILER%]==[MSVC17] call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+  - if [%COMPILER%]==[MSVC17] mkdir %EXTRAS_FOLDER% && cd %EXTRAS_FOLDER%
+  - if [%COMPILER%]==[MSVC17] appveyor DownloadFile %EXTRAS_URL%/%LIBXML2_FILE%
+  - if [%COMPILER%]==[MSVC17] 7z x %LIBXML2_FILE%
+  - if [%COMPILER%]==[MSVC17] appveyor DownloadFile %EXTRAS_URL%/%LIBXSLT_FILE%
+  - if [%COMPILER%]==[MSVC17] 7z x %LIBXSLT_FILE%
+  - if [%COMPILER%]==[MSVC17] cd %APPVEYOR_BUILD_FOLDER%
 
 build_script:
-  - C:\msys64\usr\bin\pacman --noconfirm --sync --refresh --refresh --sysupgrade --sysupgrade
-  - C:\msys64\usr\bin\bash --login -c "$(cygpath ${APPVEYOR_BUILD_FOLDER})/ci-script-windows.sh"
+  - if [%COMPILER%]==[MinGW-w64] mkdir build && cd build
+  - if [%COMPILER%]==[MinGW-w64] bash ../autogen.sh --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-mscrypto --enable-static-linking=$STATIC
+  - if [%COMPILER%]==[MinGW-w64] make
+  - if [%COMPILER%]==[MSVC17] cd win32
+  - if [%COMPILER%]==[MSVC17] cscript configure.js static=%STATIC% crypto=mscrypto,mscng iconv=no unicode=yes prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%EXTRAS_FOLDER%\include\libxml2;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
+  - if [%COMPILER%]==[MSVC17] nmake
+ 
+test_script:
+  - if [%COMPILER%]==[MinGW-w64] make check
+  - if [%COMPILER%]==[MSVC17] nmake check
+
+
