--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -547,22 +547,18 @@ check : check-keys check-dsig check-enc
 
 check-keys : $(BINDIR)\$(APP_NAME)
 	cd ..
-	if not exist win32\tmp mkdir win32\tmp
-	set TMPFOLDER=win32/tmp
 	sh ./tests/testrun.sh ./tests/testKeys.sh "$(WITH_DEFAULT_CRYPTO)" ./tests win32/$(BINDIR)/$(APP_NAME) der
 	cd win32
 
 check-dsig : $(BINDIR)\$(APP_NAME)
 	cd ..
-	if not exist win32\tmp mkdir win32\tmp
-	set TMPFOLDER=win32/tmp
+	set TMPFOLDER=/tmp
 	sh ./tests/testrun.sh ./tests/testDSig.sh "$(WITH_DEFAULT_CRYPTO)" ./tests win32/$(BINDIR)/$(APP_NAME) der
 	cd win32
 
 check-enc : $(BINDIR)\$(APP_NAME)
 	cd ..
-	if not exist win32\tmp mkdir win32\tmp
-	set TMPFOLDER=win32/tmp
+	set TMPFOLDER=/tmp
 	sh ./tests/testrun.sh ./tests/testEnc.sh "$(WITH_DEFAULT_CRYPTO)" ./tests win32/$(BINDIR)/$(APP_NAME) der
 	cd win32
 
