fixing build warnings

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -368,7 +368,7 @@ CFLAGS 			= $(CFLAGS) /D "HAVE_STDIO_H" /D "HAVE_STDLIB_H"
 CFLAGS 			= $(CFLAGS) /D "HAVE_STRING_H" /D "HAVE_CTYPE_H"
 CFLAGS 			= $(CFLAGS) /D "HAVE_MALLOC_H" /D "HAVE_MEMORY_H"
 CFLAGS 			= $(CFLAGS) /D "XMLSEC_NO_GOST" /D "XMLSEC_NO_GOST2012"
-# CFLAGS                  = $(CFLAGS) /D "XMLSEC_NO_SIZE_T"
+CFLAGS                  = $(CFLAGS) /D "XMLSEC_NO_SIZE_T"
 
 
 !if "$(UNICODE)" == "1"
