--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -368,6 +368,8 @@ CFLAGS 			= $(CFLAGS) /D "HAVE_STDIO_H" /D "HAVE_STDLIB_H"
 CFLAGS 			= $(CFLAGS) /D "HAVE_STRING_H" /D "HAVE_CTYPE_H"
 CFLAGS 			= $(CFLAGS) /D "HAVE_MALLOC_H" /D "HAVE_MEMORY_H"
 CFLAGS 			= $(CFLAGS) /D "XMLSEC_NO_GOST" /D "XMLSEC_NO_GOST2012"
+CFLAGS                  = $(CFLAGS) /D "XMLSEC_NO_SIZE_T"
+
 
 !if "$(UNICODE)" == "1"
 CFLAGS 			= $(CFLAGS) /D "UNICODE" /D "_UNICODE"
@@ -424,8 +426,8 @@ LDFLAGS 		= $(LDFLAGS)
 LDFLAGS 		= $(LDFLAGS) /opt:ref,icf
 !endif
 
-SOLIBS 			= $(LIBS) libxml2.lib
-ALIBS 			= $(LIBS) libxml2_a.lib
+SOLIBS 			= $(LIBS) libxml2.lib ws2_32.lib
+ALIBS 			= $(LIBS) libxml2_a.lib ws2_32.lib
 
 !if "$(WITH_ICONV)" == "1"
 CFLAGS          = $(CFLAGS) /D "LIBXML_ICONV_ENABLED"
@@ -545,22 +547,18 @@ check : check-keys check-dsig check-enc
 
 check-keys : $(BINDIR)\$(APP_NAME)
 	cd ..
-	if not exist win32\tmp mkdir win32\tmp
-	set TMPFOLDER=win32/tmp
 	sh ./tests/testrun.sh ./tests/testKeys.sh "$(WITH_DEFAULT_CRYPTO)" ./tests win32/$(BINDIR)/$(APP_NAME) der
 	cd win32
 
 check-dsig : $(BINDIR)\$(APP_NAME)
 	cd ..
-	if not exist win32\tmp mkdir win32\tmp
-	set TMPFOLDER=win32/tmp
+	set TMPFOLDER=/tmp
 	sh ./tests/testrun.sh ./tests/testDSig.sh "$(WITH_DEFAULT_CRYPTO)" ./tests win32/$(BINDIR)/$(APP_NAME) der
 	cd win32
 
 check-enc : $(BINDIR)\$(APP_NAME)
 	cd ..
-	if not exist win32\tmp mkdir win32\tmp
-	set TMPFOLDER=win32/tmp
+	set TMPFOLDER=/tmp
 	sh ./tests/testrun.sh ./tests/testEnc.sh "$(WITH_DEFAULT_CRYPTO)" ./tests win32/$(BINDIR)/$(APP_NAME) der
 	cd win32
 
