--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,13 @@
 # a new build using a fresh virtual machine.
 
 shallow_clone: true
+skip_branch_with_pr: true
+skip_tags: true
+skip_commits:
+  files:
+    - docs/*
+    - man/*
+
 
 environment:
   global:
