--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,30 +31,36 @@ environment:
 
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      STATIC: no
-      CRYPTO: mscrypto
       COMPILER: MSVC17
+      CRYPTO: mscrypto
+      STATIC: no
+      UNICODE: yes
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      STATIC: no
+      COMPILER: MSVC17
       CRYPTO: mscng
-      COMPILER: MSVC17
-
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       STATIC: no
-      CRYPTO: openssl
-      COMPILER: MSVC17
+      UNICODE: yes
 
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      STATIC: yes
-      CRYPTO: mscrypto
       COMPILER: MSVC17
+      CRYPTO: openssl
+      STATIC: no
+      UNICODE: yes
 
-    - STATIC: no
-      COMPILER: MinGW-w64
+    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      COMPILER: MSVC17
+      CRYPTO: mscrypto
+      STATIC: yes
+      UNICODE: no
+
+    - COMPILER: MinGW-w64
+      STATIC: no
+      UNICODE: yes
     
-    - STATIC: yes
-      COMPILER: MinGW-w64
+    - COMPILER: MinGW-w64
+      STATIC: yes
+      UNICODE: yes
 
 init:
   - git config --global core.autocrlf input
@@ -77,10 +83,10 @@ install:
 
 build_script:
   - if [%COMPILER%]==[MinGW-w64] mkdir build && cd build
-  - if [%COMPILER%]==[MinGW-w64] bash ../autogen.sh --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-unicode --enable-mscrypto --enable-mscng --enable-openssl --enable-gnutls --enable-static-linking=$STATIC
+  - if [%COMPILER%]==[MinGW-w64] bash ../autogen.sh --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-unicode=$UNICODE --enable-mscrypto --enable-mscng --enable-openssl --enable-gnutls --enable-static-linking=$STATIC
   - if [%COMPILER%]==[MinGW-w64] make
   - if [%COMPILER%]==[MSVC17] cd win32
-  - if [%COMPILER%]==[MSVC17] cscript configure.js static=%STATIC% crypto=%CRYPTO% iconv=no unicode=yes prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%EXTRAS_FOLDER%\include\libxml2;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
+  - if [%COMPILER%]==[MSVC17] cscript configure.js static=%STATIC% crypto=%CRYPTO% iconv=no unicode=%UNICODE% prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%EXTRAS_FOLDER%\include\libxml2;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
   - if [%COMPILER%]==[MSVC17] nmake
  
 test_script:
