--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,8 @@
 # You can check the whole build process in the logs, and any later commit will start
 # a new build using a fresh virtual machine.
 
+version: '1.2.26-{build}'
+
 shallow_clone: true
 skip_branch_with_pr: true
 skip_tags: true
@@ -20,6 +22,8 @@ skip_commits:
     - docs/*
     - man/*
 
+image:
+- Visual Studio 2017
 
 environment:
   global:
@@ -30,31 +34,38 @@ environment:
     OPENSSL_FILE: openssl-1.1.0h-x64.7z
 
   matrix:
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      STATIC: no
+    - COMPILER: MSVC17
       CRYPTO: mscrypto
-      COMPILER: MSVC17
-
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       STATIC: no
+      UNICODE: yes
+
+    - COMPILER: MSVC17
       CRYPTO: mscng
-      COMPILER: MSVC17
-
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       STATIC: no
+      UNICODE: yes
+
+    - COMPILER: MSVC17
       CRYPTO: openssl
-      COMPILER: MSVC17
+      STATIC: no
+      UNICODE: yes
 
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-      STATIC: yes
+    - COMPILER: MSVC17
       CRYPTO: mscrypto
-      COMPILER: MSVC17
+      STATIC: no
+      UNICODE: no
 
-    - STATIC: no
-      COMPILER: MinGW-w64
+    - COMPILER: MSVC17
+      CRYPTO: mscng
+      STATIC: no
+      UNICODE: no
+
+    - COMPILER: MinGW-w64
+      STATIC: no
+      UNICODE: yes
     
-    - STATIC: yes
-      COMPILER: MinGW-w64
+    - COMPILER: MinGW-w64
+      STATIC: yes
+      UNICODE: no
 
 init:
   - git config --global core.autocrlf input
@@ -77,10 +88,10 @@ install:
 
 build_script:
   - if [%COMPILER%]==[MinGW-w64] mkdir build && cd build
-  - if [%COMPILER%]==[MinGW-w64] bash ../autogen.sh --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-unicode --enable-mscrypto --enable-mscng --enable-openssl --enable-gnutls --enable-static-linking=$STATIC
+  - if [%COMPILER%]==[MinGW-w64] bash ../autogen.sh --build="x86_64-w64-mingw32" --host="x86_64-w64-mingw32" --enable-unicode=$UNICODE --enable-mscrypto --enable-mscng --enable-openssl --enable-gnutls --enable-static-linking=$STATIC
   - if [%COMPILER%]==[MinGW-w64] make
   - if [%COMPILER%]==[MSVC17] cd win32
-  - if [%COMPILER%]==[MSVC17] cscript configure.js static=%STATIC% crypto=%CRYPTO% iconv=no unicode=yes prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%EXTRAS_FOLDER%\include\libxml2;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
+  - if [%COMPILER%]==[MSVC17] cscript configure.js static=%STATIC% crypto=%CRYPTO% iconv=no unicode=%UNICODE% prefix=%EXTRAS_FOLDER% include=%EXTRAS_FOLDER%\include;%EXTRAS_FOLDER%\include\libxml2;%MSSDK_INCLUDE% lib=%EXTRAS_FOLDER%\bin;%EXTRAS_FOLDER%\lib;%MSSDK_LIB%
   - if [%COMPILER%]==[MSVC17] nmake
  
 test_script:
