--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ install:
 # install gnutls libraries
 - sudo apt-get install libgnutls28 libgnutls-dev
 script:
-- mkdir build && cd build && ../autogen.sh && make && make check
+- mkdir build && cd build && ../autogen.sh --enable-werror && make && make check
