win32: disable warnings about constant asserts
static asserts would be C11.

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -355,7 +355,9 @@ CPPFLAGS 		= /nologo
 CFLAGS 			= /nologo /D "WIN32" /D "_WINDOWS" /D inline=__inline
 # C4130: '!=': logical operation on address of string constant:
 #     this generates a false warning inside macros
-CFLAGS 			= $(CFLAGS) /D "_MBCS" /D "_REENTRANT"  /W4 /wd4130
+# C4127: conditional expression is constant
+#     this generates a false warning inside asserts
+CFLAGS 			= $(CFLAGS) /D "_MBCS" /D "_REENTRANT"  /W4 /wd4130 /wd4127
 
 !if "$(WERROR)" == "1"
 CFLAGS 			= $(CFLAGS) /WX
