--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -357,7 +357,10 @@ CFLAGS 			= /nologo /D "WIN32" /D "_WINDOWS" /D inline=__inline
 #     this generates a false warning inside macros
 # C4127: conditional expression is constant
 #     this generates a false warning inside asserts
-CFLAGS 			= $(CFLAGS) /D "_MBCS" /D "_REENTRANT"  /W4 /wd4130 /wd4127
+# C4152: nonstandard extension, function/data pointer conversion in expression
+#     this generates a false warning for XMLSEC_PTR_TO_FUNC
+CFLAGS 			= $(CFLAGS) /D "_MBCS" /D "_REENTRANT"  /W4 /wd4130
+CFLAGS                  = $(CFLAGS) /wd4127 /wd4152
 
 !if "$(WERROR)" == "1"
 CFLAGS 			= $(CFLAGS) /WX
